# SorTgBot

./: .gitignore  config.yml  pyproject.toml
sortgbot/: loader.py  main.py
sortgbot/bot/filters/: main_filter.py
sortgbot/bot/handlers/: common_menu.py  end_case.py
sortgbot/bot/handlers/admin_handlers/: admin_menu.py
sortgbot/bot/markups/: __init__.py  admin.py  main.py
sortgbot/bot/middleware/: auth_middleware.py
sortgbot/bot/scenario/: scenario.py
sortgbot/bot/states/: create_summation.py
sortgbot/bot/utils/: main_helpers.py
sortgbot/config/: config.py  log_settings.py
sortgbot/db/: db_main.py  del_table.py  models.py
tests/: test_sortgbot.py
